[Server] Implement password reset.
