# server/src/main/kotlin/com/yawa/server/api/auth/password/ResetPassword.kt
@@ -1,6 +1,6 @@
-package com.yawa.server.api.users.password
+package com.yawa.server.api.auth.password
 
-import com.yawa.server.constants.OpenApiTags.USERS
+import com.yawa.server.constants.OpenApiTags.AUTHENTICATION
 import com.yawa.server.models.tokens.TokenAction
 import com.yawa.server.notifications.MailService
 import com.yawa.server.notifications.MailType
@@ -10,8 +10,7 @@ import io.swagger.v3.oas.annotations.Operation
 import mu.KotlinLogging
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.MediaType
-import org.springframework.web.bind.annotation.PatchMapping
-import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RestController
 
@@ -24,17 +23,16 @@ class ResetPassword(
     @Autowired val mailService: MailService,
 ) {
 
-    @Operation(tags = [USERS])
-    @PatchMapping("/users/{username}/password", produces = [MediaType.APPLICATION_JSON_VALUE])
+    @Operation(tags = [AUTHENTICATION])
+    @PostMapping("/auth/password-reset", produces = [MediaType.APPLICATION_JSON_VALUE])
     fun resetPassword(
-        @PathVariable username: String,
         @RequestBody request: ResetPasswordRequest,
     ): ResetPasswordResponse {
         log.info("Processing request: $request")
 
-        val grant = actionTokenService.consumeToken(
-            token = request.token, action = TokenAction.RESET_PASSWORD, username = username,
-        )
+        val grant = actionTokenService.consumeToken(token = request.token, action = TokenAction.RESET_PASSWORD)
+
+        val username = grant.username
 
         val user = userService.findUser(username = username)
 
@@ -54,7 +52,10 @@ class ResetPassword(
         return ResetPasswordResponse(message = "Confirmed password reset for user ${user.username}")
     }
 
-    data class ResetPasswordRequest(val token: String, val password: String)
+    data class ResetPasswordRequest(
+        val password: String,
+        val token: String,
+    )
 
     data class ResetPasswordResponse(val message: String)
 }
